// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledForm /> should render correctly with nothing passed 1`] = `
.c0 {
  min-height: calc(100vh - 50px - 30px - 0px);
  padding: 15px;
  margin: 15px 0;
  background: #ffffff;
}

<form
  className="c0"
  noValidate={true}
/>
`;

exports[`<StyledForm /> should render correctly with vh and margin passed 1`] = `
.c0 {
  min-height: calc(100vh - 50px - 30px - 15px);
  padding: 15px;
  margin: 15px 0;
  background: #ffffff;
}

<form
  className="c0"
  noValidate={true}
/>
`;

exports[`<StyledForm__StyledForm /> should render correctly 1`] = `
.c0 {
  min-height: calc(100vh - 50px - 30px - 0px);
  padding: 15px;
  margin: 15px 0;
  background: #ffffff;
}

<form
  className="c0"
  noValidate={true}
/>
`;
